
name:                                       cryptopals
version:                                    0.1.0.0
homepage:                                   https://github.com/rcook/cryptopals#readme
license:                                    MIT
license-file:                               LICENSE
author:                                     Richard Cook
maintainer:                                 rcook@rcook.org
copyright:                                  2018 Richard Cook
category:                                   Command Line
build-type:                                 Simple
cabal-version:                              >= 1.10
extra-source-files:                         README.md
data-files:                                 *.txt
data-dir:                                   _data

source-repository head
  type:                                     git
  location:                                 https://github.com/rcook/cryptopals.git

library
  default-language:                         Haskell2010
  hs-source-dirs:                           lib
  ghc-options:                              -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , bytestring
                                          , split
                                          , unordered-containers
  exposed-modules:                          Cryptopals
                                          , Cryptopals.Algos
                                          , Cryptopals.Base64
                                          , Cryptopals.Hex
                                          , Cryptopals.Prelude
                                          , Cryptopals.Util
                                          , Cryptopals.XOR

executable scratch
  default-language:                         Haskell2010
  hs-source-dirs:                           scratch
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , cryptopals

executable s01c01
  default-language:                         Haskell2010
  hs-source-dirs:                           s01c01
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , cryptopals

executable s01c02
  default-language:                         Haskell2010
  hs-source-dirs:                           s01c02
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , cryptopals

executable s01c03
  default-language:                         Haskell2010
  hs-source-dirs:                           s01c03
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , cryptopals

executable s01c04
  default-language:                         Haskell2010
  hs-source-dirs:                           s01c04
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , cryptopals

executable s01c05
  default-language:                         Haskell2010
  hs-source-dirs:                           s01c05
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , cryptopals

executable s01c06
  default-language:                         Haskell2010
  hs-source-dirs:                           s01c06
  main-is:                                  Main.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
                                          , cryptopals

test-suite cryptopals-test
  type:                                     exitcode-stdio-1.0
  default-language:                         Haskell2010
  hs-source-dirs:                           test
  main-is:                                  Spec.hs
  ghc-options:                              -threaded -rtsopts -with-rtsopts=-N -W -Wall -fwarn-incomplete-patterns -fwarn-unused-imports
  other-modules:                            CryptopalsSpec
  build-depends:                            base >= 4.7 && < 5
                                          , cryptopals
                                          , hspec
